[package]
name = "rust-audio-validator"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
pcap = "2.0"
pnet = "0.35"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_Properties",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.28"        # PulseAudio bindings
libpulse-simple-binding = "2.28"
x11 = { version = "2.21", features = ["xlib"] }  # Window titles
procfs = "0.16"                  # Process info from /proc
nix = { version = "0.27", features = ["process"] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11"           # Core Audio framework
core-foundation = "0.9"         # CF types
cocoa = "0.25"                  # Cocoa/AppKit bindings
objc = "0.2"                    # Objective-C bridge
libc = "0.2"                    # System calls
